--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <picture>
             <source
               media="(max-width: 1440px)"
-              srcset="/styles/img/image-equilibrium-desktop.jpg"
+              srcset="./styles/img/image-equilibrium-desktop.jpg"
             />
             <img
               src="./styles/img/image-equilibrium.jpg"
